--- a/account.html
+++ b/account.html
@@ -74,7 +74,16 @@
                 <p><a href="" id="logout-btn">Logout</a></p>
             </div>
 
-            <div class="col-lg-6 col-md-12 col-sm-12"></div>
+            <div class="col-lg-6 col-md-12 col-sm-12">
+                <form id="account-form">
+                  <h3>Change Password</h3>
+                  <hr class="mx-auto">
+                  <div class="form-group">
+                    <label for="">Password</label>
+                    <input type="password" class="form-control" id="account-password" name="password" placeholder="Password">
+                  </div>
+                </form>
+            </div>
 
         </div>
    </div>
