--- a/index.html
+++ b/index.html
@@ -42,13 +42,14 @@
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" href="#">Contact Us</a>
+            <a class="nav-link" href="contact.html">Contact Us</a>
           </li>
 
           <li class="nav-item">
             <a class="nav-link" href="#">
-              <i class="fa-solid fa-cart-shopping"></i>
-              <i class="fa-solid fa-user"></i>
+              <a href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a>
+              <a href="account.html"><i class="fas fa-user"></i></a>
+              
             </a>
           </li>
 
