--- a/shop.html
+++ b/shop.html
@@ -10,7 +10,7 @@
   <link  rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
 
 
-  <link rel="stylesheet" href="assests/css/styles1.css">
+  <link rel="stylesheet" href="assests/css/styles.css">
 
   <style>
     .product img{
